parent-child transmission

--- a/src/app/components/forexemple/forexemple.component.html
+++ b/src/app/components/forexemple/forexemple.component.html
@@ -1,5 +1,5 @@
 <div>
-  <p appBold>Mes fruits préférés:</p>
+  <p appBold>Liste des items :</p>
   <ul>
     <li *ngFor="let item of items">{{ item }}</li>
   </ul>
