--- a/src/app/components/ifexemple/ifexemple.component.html
+++ b/src/app/components/ifexemple/ifexemple.component.html
@@ -1,4 +1,4 @@
-<div appBold>
+<div appBold class="text-end px-5">
     <span *ngIf="userLoggedIn else offline">
         Welcome, {{usename}} !
     </span>
