send another element to child

--- a/src/app/layout/body/body.component.html
+++ b/src/app/layout/body/body.component.html
@@ -15,6 +15,6 @@
   </app-ngclass-exemple>
   <app-forexemple [items] = "items"></app-forexemple>
   <app-switchexemple></app-switchexemple>
-  <app-fruits></app-fruits>
+  <app-fruits [fruits] = "fruits"></app-fruits>
   <app-increment-decrement></app-increment-decrement>
 </div>
