--- a/src/app/components/ifexemple/ifexemple.component.html
+++ b/src/app/components/ifexemple/ifexemple.component.html
@@ -1,10 +1,18 @@
 <div appBold class="text-end px-5">
-    <span *ngIf="userLoggedIn else offline">
-        Welcome, {{usename}} !
-    </span>
-    <ng-template #offline>
-        <span>
-            Non connecté
-        </span>
-    </ng-template>
+  <div class="form-check form-switch">
+    <input
+      class="form-check-input"
+      type="checkbox"
+      id="flexSwitchCheckChecked"
+      (click)="onConnectToggle()"
+    />
+    <label class="form-check-label" for="flexSwitchCheckChecked">
+      <i *ngIf="userLoggedIn; else offline" class="text-success">
+        Welcome, {{ usename }} !
+      </i>
+      <ng-template #offline>
+        <i class="text-danger"> Non connecté </i>
+      </ng-template>
+    </label>
+  </div>
 </div>
