swicth label on left side

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -61,8 +61,9 @@
 
         <button class="btn btn-outline-dark" type="submit">Search</button>
       </form>
-      
-  <app-ifexemple></app-ifexemple>
+      <div [ngStyle]="{'width': '350px'}">
+        <app-ifexemple></app-ifexemple>
+      </div>
     </div>
   </div>
 </nav>
