--- a/src/app/components/ifexemple/ifexemple.component.html
+++ b/src/app/components/ifexemple/ifexemple.component.html
@@ -1,11 +1,5 @@
 <div appBold class="text-end px-5">
   <div class="form-check form-switch">
-    <input
-      class="form-check-input"
-      type="checkbox"
-      id="flexSwitchCheckChecked"
-      (click)="onConnectToggle()"
-    />
     <label class="form-check-label" for="flexSwitchCheckChecked">
       <i *ngIf="userLoggedIn; else offline" class="text-success">
         Welcome, {{ usename }} !
@@ -14,5 +8,12 @@
         <i class="text-danger"> Non connecté </i>
       </ng-template>
     </label>
+    <input
+      class="form-check-input"
+      type="checkbox"
+      id="flexSwitchCheckChecked"
+      (click)="onConnectToggle()"
+      style="float:none;margin-left:0.5rem"
+    />
   </div>
 </div>
