--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -56,6 +56,7 @@
           placeholder="Search"
           aria-label="Search"
           value="{{ searchText }}"
+          name="Search"
           [(ngModel)]="searchText"
         />
 
