add reactive form

--- a/src/app/layout/body/body.component.html
+++ b/src/app/layout/body/body.component.html
@@ -1,5 +1,6 @@
 <div class="m-5 px-5 ">
   <app-login></app-login>
+  <app-login2></app-login2>
   <app-ngclass-exemple>
     <p>test brut content projection</p>
     <div list class="bg-warning rounded p-5 w-50" style="box-shadow: inset 0px 0px 20px 20px  white">
