add validation form

--- a/src/app/components/login2/login2.component.html
+++ b/src/app/components/login2/login2.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="col-auto" *ngIf="form.value.email && form.value.password">
-    <span id="passwordHelpInline" class="form-text">
+    <span class="form-text">
       <b>Email: </b>{{ form.value.email }} <b>Password: </b
       >{{ form.value.password }}
     </span>
