--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,7 @@
 <form class="row g-3 align-items-center" (ngSubmit) = "onSubmit()">
+    <div class="col-auto" *ngIf="credentials.email && credentials.password">
+        <span class="form-text"> Template Driven Form:  </span>
+      </div>
     <div class="col-auto">
         <input class="form-control" type="text" [(ngModel)] = "credentials.email" name="email" >
     </div>
